# lip

basics/adder/: dune-project
basics/adder/lib/: adder.ml
basics/recognizer/: .ocamlinit  dune-project
basics/recognizer/lib/: recognizer.ml
basics/tugofwar/: .ocamlinit  dune-project
basics/tugofwar/lib/: tugofwar.ml
contextfree/: dune-project
contextfree/contextfree/: dune-project
contextfree/lib/: exercises.ml
contextfree/test/: test_contextfree.ml
expr/andboolexpr/lib/: lexer.mll  main.ml  parser.mly
expr/arithexpr/: .ocamlinit
expr/arithexpr/lib/: lexer.mll  main.ml  parser.mly
expr/boolexpr/: README.md  dune-project
expr/boolexpr/lib/: dune  main.ml  parser.mly
expr/boolexpr/test/: boolexpr.ml  dune
expr/sarithexpr/: .ocamlinit
expr/sarithexpr/lib/: lexer.mll  main.ml  parser.mly
expr/sarithexpr/test/: dune  sarithexpr.ml
life/: .ocamlinit  dune-project
life/lib/: ast.ml  lexer.mll  main.ml  parser.mly
life/test/: dune  test_life.ml
toylexer/: .ocamlinit  README.md  dune-project
toylexer/lib/: lexer.mll  main.ml  token.ml
toylexer/test/: dune  test_toylexer.ml
toyparser/: .ocamlinit  dune-project
toyparser/lib/: ast.ml  lexer.mll  main.ml  parser.mly
toyparser/test/: test_toyparser.ml
