(lang dune 3.16)

(name contextfree)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Mantainer Name")

(license LICENSE)

(documentation https://url/to/docuemntation)

(package
 (name contextfree)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))
